# typedai

./: .gitignore  README.md  pyproject.toml
.github/workflows/: rev_pypi.yml  test_python.yml
tests/: conftest.py  test_client.py  test_create.py  test_parsing.py  test_stream.py  test_typed_ai.py
tests/cassettes/test_create/: test_continuing_tool_call.yaml  test_create_to_completion.yaml  test_int_response.yaml  test_int_response_can_be_continued.yaml  test_string_completions.yaml  test_typed_completions.yaml  test_typed_tools.yaml
tests/cassettes/test_parsing/: test_any_handles_execution_error.yaml  test_any_handlies_parsing_error.yaml  test_can_parse_none_without_error.yaml  test_none_raises_execution_error.yaml  test_none_raises_parsing_error.yaml  test_parsing_error.yaml  test_parsing_handles_parsing_error.yaml  test_parsing_raises_execution_error.yaml
tests/cassettes/test_stream/: test_continuing_tool_call.yaml  test_int_response.yaml  test_int_response_can_be_continued.yaml  test_string_completions.yaml  test_typed_completions.yaml  test_typed_tools.yaml
typedai/: __init__.py  client.py  completions.py  config.py  errors.py  messages.py  models.py  util.py
