[tool.poetry]
name = "eidolon-typedai"
version = "0.1.1"
description = "Simplify the OpenAI chat completions api using type hints."
authors = ["Luke Lalor <lukehlalor@gmail.com>"]
readme = "README.md"

packages = [
    { include = "typedai" },
]
include = [
    "resources/**/*"
]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.35.13"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.7"
pytest = "^8.2.2"
pytest-recording = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
